// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._186055oz,html._186055oz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_15gpj6e0 mf5rjw18 mf5rjw1b">
+        <div class="_1j5ut1e0 _186055o76 _186055o66 _186055o96 _186055o86 _186055o5a mf5rjw18 mf5rjw1b _186055o32 _186055o35">
+          <span class="_1j5ut1e0 _186055o4u mf5rjw0 mf5rjw1 mf5rjw21 _1d0g9qk4 mf5rjwd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._1j5ut1e0 {
  -webkit-tap-highlight-color: transparent;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}
[data-braid-hidefocusrings] ._1j5ut1e0 {
  outline: none;
}
._1j5ut1e1 {
  display: block;
}
._1j5ut1e2 {
  line-height: 1;
}
._1j5ut1e3 {
  list-style: none;
}
._1j5ut1e4 {
  quotes: none;
}
._1j5ut1e4:after,
._1j5ut1e4:before {
  content: "";
}
._1j5ut1e5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._1j5ut1e6 {
  -webkit-appearance: none;
  appearance: none;
}
._1j5ut1e7 {
  background-color: transparent;
}
._1j5ut1e9 {
  color: inherit;
}
._1j5ut1ea:disabled {
  opacity: 1;
}
._1j5ut1ea::-ms-expand {
  display: none;
}
._1j5ut1ec[type="number"] {
  -moz-appearance: textfield;
}
._1j5ut1ec[type="number"]::-webkit-inner-spin-button,
._1j5ut1ec[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._1j5ut1ec::-ms-clear {
  display: none;
}
._1j5ut1ec::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._1j5ut1ef {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
._186055o0 {
  overflow: hidden;
}
._186055o1 {
  overflow: scroll;
}
._186055o2 {
  overflow: visible;
}
._186055o3 {
  overflow: auto;
}
._186055o4 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._186055o5 {
  outline: none;
}
._186055o6 {
  opacity: 0;
}
._186055o7 {
  z-index: 0;
}
._186055o8 {
  z-index: 1;
}
._186055o9 {
  z-index: 2;
}
._186055oa {
  z-index: 90;
}
._186055ob {
  z-index: 100;
}
._186055oc {
  z-index: 200;
}
._186055od {
  z-index: 290;
}
._186055oe {
  z-index: 300;
}
._186055of {
  z-index: 400;
}
._186055og {
  cursor: default;
}
._186055oh {
  cursor: pointer;
}
._186055oi {
  pointer-events: none;
}
._186055oj {
  top: 0;
}
._186055ok {
  bottom: 0;
}
._186055ol {
  left: 0;
}
._186055om {
  right: 0;
}
._186055on {
  height: 100%;
}
._186055oo {
  height: var(--_15jfhu08);
}
._186055op {
  width: 100%;
}
._186055oq {
  width: var(--_15jfhu08);
}
._186055or {
  min-width: 0;
}
._186055os {
  max-width: var(--_15jfhu0z);
}
._186055ot {
  max-width: var(--_15jfhu010);
}
._186055ou {
  max-width: var(--_15jfhu011);
}
._186055ov {
  max-width: var(--_15jfhu012);
}
._186055ow {
  transition: var(--_15jfhu05f);
}
._186055ox {
  transition: var(--_15jfhu05g);
}
._186055oy:active {
  transform: var(--_15jfhu05h);
}
html._186055oz ._186055o11,
html:not(._186055oz) ._186055o10 {
  background: var(--_15jfhu01r);
}
html._186055oz ._186055o13,
html:not(._186055oz) ._186055o12 {
  background: var(--_15jfhu01s);
}
html._186055oz ._186055o15,
html:not(._186055oz) ._186055o14 {
  background: var(--_15jfhu01t);
}
html._186055oz ._186055o17,
html:not(._186055oz) ._186055o16 {
  background: var(--_15jfhu01u);
}
html._186055oz ._186055o19,
html:not(._186055oz) ._186055o18 {
  background: var(--_15jfhu01v);
}
html._186055oz ._186055o1b,
html:not(._186055oz) ._186055o1a {
  background: var(--_15jfhu01w);
}
html._186055oz ._186055o1d,
html:not(._186055oz) ._186055o1c {
  background: var(--_15jfhu01x);
}
html._186055oz ._186055o1f,
html:not(._186055oz) ._186055o1e {
  background: var(--_15jfhu01y);
}
html._186055oz ._186055o1h,
html:not(._186055oz) ._186055o1g {
  background: var(--_15jfhu01z);
}
html._186055oz ._186055o1j,
html:not(._186055oz) ._186055o1i {
  background: var(--_15jfhu020);
}
html._186055oz ._186055o1l,
html:not(._186055oz) ._186055o1k {
  background: var(--_15jfhu021);
}
html._186055oz ._186055o1n,
html:not(._186055oz) ._186055o1m {
  background: var(--_15jfhu022);
}
html._186055oz ._186055o1p,
html:not(._186055oz) ._186055o1o {
  background: var(--_15jfhu023);
}
html._186055oz ._186055o1r,
html:not(._186055oz) ._186055o1q {
  background: var(--_15jfhu024);
}
html._186055oz ._186055o1t,
html:not(._186055oz) ._186055o1s {
  background: var(--_15jfhu025);
}
html._186055oz ._186055o1v,
html:not(._186055oz) ._186055o1u {
  background: var(--_15jfhu026);
}
html._186055oz ._186055o1x,
html:not(._186055oz) ._186055o1w {
  background: var(--_15jfhu027);
}
html._186055oz ._186055o1z,
html:not(._186055oz) ._186055o1y {
  background: var(--_15jfhu028);
}
html._186055oz ._186055o21,
html:not(._186055oz) ._186055o20 {
  background: var(--_15jfhu029);
}
html._186055oz ._186055o23,
html:not(._186055oz) ._186055o22 {
  background: var(--_15jfhu02a);
}
html._186055oz ._186055o25,
html:not(._186055oz) ._186055o24 {
  background: var(--_15jfhu02b);
}
html._186055oz ._186055o27,
html:not(._186055oz) ._186055o26 {
  background: var(--_15jfhu02c);
}
html._186055oz ._186055o29,
html:not(._186055oz) ._186055o28 {
  background: var(--_15jfhu02d);
}
html._186055oz ._186055o2b,
html:not(._186055oz) ._186055o2a {
  background: var(--_15jfhu02e);
}
html._186055oz ._186055o2d,
html:not(._186055oz) ._186055o2c {
  background: var(--_15jfhu02f);
}
html._186055oz ._186055o2f,
html:not(._186055oz) ._186055o2e {
  background: var(--_15jfhu02g);
}
html._186055oz ._186055o2h,
html:not(._186055oz) ._186055o2g {
  background: var(--_15jfhu02h);
}
html._186055oz ._186055o2j,
html:not(._186055oz) ._186055o2i {
  background: var(--_15jfhu02i);
}
html._186055oz ._186055o2l,
html:not(._186055oz) ._186055o2k {
  background: var(--_15jfhu02j);
}
html._186055oz ._186055o2n,
html:not(._186055oz) ._186055o2m {
  background: var(--_15jfhu02k);
}
html._186055oz ._186055o2p,
html:not(._186055oz) ._186055o2o {
  background: var(--_15jfhu02l);
}
html._186055oz ._186055o2r,
html:not(._186055oz) ._186055o2q {
  background: var(--_15jfhu02m);
}
html._186055oz ._186055o2t,
html:not(._186055oz) ._186055o2s {
  background: var(--_15jfhu02n);
}
html._186055oz ._186055o2v,
html:not(._186055oz) ._186055o2u {
  background: var(--_15jfhu02o);
}
html._186055oz ._186055o2x,
html:not(._186055oz) ._186055o2w {
  background: var(--_15jfhu02p);
}
html._186055oz ._186055o2z,
html:not(._186055oz) ._186055o2y {
  background: var(--_15jfhu02q);
}
html._186055oz ._186055o31,
html:not(._186055oz) ._186055o30 {
  background: var(--_15jfhu02r);
}
html._186055oz ._186055o33,
html:not(._186055oz) ._186055o32 {
  background: var(--_15jfhu02s);
}
html._186055oz ._186055o35,
html:not(._186055oz) ._186055o34 {
  background: var(--_15jfhu02t);
}
html._186055oz ._186055o37,
html:not(._186055oz) ._186055o36 {
  box-shadow: var(--_15jfhu05i);
}
html._186055oz ._186055o39,
html:not(._186055oz) ._186055o38 {
  box-shadow: var(--_15jfhu05j);
}
html._186055oz ._186055o3b,
html:not(._186055oz) ._186055o3a {
  box-shadow: var(--_15jfhu05k);
}
html._186055oz ._186055o3d,
html:not(._186055oz) ._186055o3c {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0d);
}
html._186055oz ._186055o3f,
html:not(._186055oz) ._186055o3e {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0e);
}
html._186055oz ._186055o3h,
html:not(._186055oz) ._186055o3g {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0f);
}
html._186055oz ._186055o3j,
html:not(._186055oz) ._186055o3i {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0g);
}
html._186055oz ._186055o3l,
html:not(._186055oz) ._186055o3k {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0h);
}
html._186055oz ._186055o3n,
html:not(._186055oz) ._186055o3m {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0h);
}
html._186055oz ._186055o3p,
html:not(._186055oz) ._186055o3o {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0i);
}
html._186055oz ._186055o3r,
html:not(._186055oz) ._186055o3q {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0i);
}
html._186055oz ._186055o3t,
html:not(._186055oz) ._186055o3s {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0j);
}
html._186055oz ._186055o3v,
html:not(._186055oz) ._186055o3u {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0l);
}
html._186055oz ._186055o3x,
html:not(._186055oz) ._186055o3w {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0l);
}
html._186055oz ._186055o3z,
html:not(._186055oz) ._186055o3y {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0m);
}
html._186055oz ._186055o41,
html:not(._186055oz) ._186055o40 {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0m);
}
html._186055oz ._186055o43,
html:not(._186055oz) ._186055o42 {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0n);
}
html._186055oz ._186055o45,
html:not(._186055oz) ._186055o44 {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0o);
}
html._186055oz ._186055o47,
html:not(._186055oz) ._186055o46 {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0p);
}
html._186055oz ._186055o49,
html:not(._186055oz) ._186055o48 {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0p);
}
html._186055oz ._186055o4b,
html:not(._186055oz) ._186055o4a {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0q);
}
html._186055oz ._186055o4d,
html:not(._186055oz) ._186055o4c {
  box-shadow: inset 0 0 0 var(--_15jfhu0x) var(--_15jfhu0q);
}
html._186055oz ._186055o4f,
html:not(._186055oz) ._186055o4e {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0r);
}
html._186055oz ._186055o4h,
html:not(._186055oz) ._186055o4g {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0s);
}
html._186055oz ._186055o4j,
html:not(._186055oz) ._186055o4i {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0t);
}
html._186055oz ._186055o4l,
html:not(._186055oz) ._186055o4k {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0u);
}
html._186055oz ._186055o4n,
html:not(._186055oz) ._186055o4m {
  box-shadow: inset 0 0 0 var(--_15jfhu0w) var(--_15jfhu0v);
}
html._186055oz ._186055o4p,
html:not(._186055oz) ._186055o4o {
  box-shadow: 0 0 0 var(--_15jfhu0y) var(--_15jfhu0k);
}
._186055o4q {
  display: none;
}
._186055o4u {
  display: block;
}
._186055o4y {
  display: inline;
}
._186055o52 {
  display: inline-block;
}
._186055o56 {
  display: flex;
}
._186055o5a {
  position: relative;
}
._186055o5e {
  position: absolute;
}
._186055o5i {
  position: fixed;
}
._186055o5m {
  border-radius: 0;
}
._186055o5q {
  border-radius: 9999px;
}
._186055o5u {
  border-radius: var(--_15jfhu0a);
}
._186055o5y {
  border-radius: var(--_15jfhu0b);
}
._186055o62 {
  border-radius: var(--_15jfhu0c);
}
._186055o66 {
  padding-top: var(--_15jfhu00);
}
._186055o6a {
  padding-top: var(--_15jfhu01);
}
._186055o6e {
  padding-top: var(--_15jfhu02);
}
._186055o6i {
  padding-top: var(--_15jfhu03);
}
._186055o6m {
  padding-top: var(--_15jfhu04);
}
._186055o6q {
  padding-top: var(--_15jfhu05);
}
._186055o6u {
  padding-top: var(--_15jfhu06);
}
._186055o6y {
  padding-top: var(--_15jfhu07);
}
._186055o72 {
  padding-top: 0;
}
._186055o76 {
  padding-bottom: var(--_15jfhu00);
}
._186055o7a {
  padding-bottom: var(--_15jfhu01);
}
._186055o7e {
  padding-bottom: var(--_15jfhu02);
}
._186055o7i {
  padding-bottom: var(--_15jfhu03);
}
._186055o7m {
  padding-bottom: var(--_15jfhu04);
}
._186055o7q {
  padding-bottom: var(--_15jfhu05);
}
._186055o7u {
  padding-bottom: var(--_15jfhu06);
}
._186055o7y {
  padding-bottom: var(--_15jfhu07);
}
._186055o82 {
  padding-bottom: 0;
}
._186055o86 {
  padding-right: var(--_15jfhu00);
}
._186055o8a {
  padding-right: var(--_15jfhu01);
}
._186055o8e {
  padding-right: var(--_15jfhu02);
}
._186055o8i {
  padding-right: var(--_15jfhu03);
}
._186055o8m {
  padding-right: var(--_15jfhu04);
}
._186055o8q {
  padding-right: var(--_15jfhu05);
}
._186055o8u {
  padding-right: var(--_15jfhu06);
}
._186055o8y {
  padding-right: var(--_15jfhu07);
}
._186055o92 {
  padding-right: 0;
}
._186055o96 {
  padding-left: var(--_15jfhu00);
}
._186055o9a {
  padding-left: var(--_15jfhu01);
}
._186055o9e {
  padding-left: var(--_15jfhu02);
}
._186055o9i {
  padding-left: var(--_15jfhu03);
}
._186055o9m {
  padding-left: var(--_15jfhu04);
}
._186055o9q {
  padding-left: var(--_15jfhu05);
}
._186055o9u {
  padding-left: var(--_15jfhu06);
}
._186055o9y {
  padding-left: var(--_15jfhu07);
}
._186055oa2 {
  padding-left: 0;
}
._186055oa6 {
  margin-top: var(--_15jfhu00);
}
._186055oaa {
  margin-top: var(--_15jfhu01);
}
._186055oae {
  margin-top: var(--_15jfhu02);
}
._186055oai {
  margin-top: var(--_15jfhu03);
}
._186055oam {
  margin-top: var(--_15jfhu04);
}
._186055oaq {
  margin-top: var(--_15jfhu05);
}
._186055oau {
  margin-top: var(--_15jfhu06);
}
._186055oay {
  margin-top: var(--_15jfhu07);
}
._186055ob2 {
  margin-top: 0;
}
._186055ob6 {
  margin-bottom: var(--_15jfhu00);
}
._186055oba {
  margin-bottom: var(--_15jfhu01);
}
._186055obe {
  margin-bottom: var(--_15jfhu02);
}
._186055obi {
  margin-bottom: var(--_15jfhu03);
}
._186055obm {
  margin-bottom: var(--_15jfhu04);
}
._186055obq {
  margin-bottom: var(--_15jfhu05);
}
._186055obu {
  margin-bottom: var(--_15jfhu06);
}
._186055oby {
  margin-bottom: var(--_15jfhu07);
}
._186055oc2 {
  margin-bottom: 0;
}
._186055oc6 {
  margin-right: var(--_15jfhu00);
}
._186055oca {
  margin-right: var(--_15jfhu01);
}
._186055oce {
  margin-right: var(--_15jfhu02);
}
._186055oci {
  margin-right: var(--_15jfhu03);
}
._186055ocm {
  margin-right: var(--_15jfhu04);
}
._186055ocq {
  margin-right: var(--_15jfhu05);
}
._186055ocu {
  margin-right: var(--_15jfhu06);
}
._186055ocy {
  margin-right: var(--_15jfhu07);
}
._186055od2 {
  margin-right: 0;
}
._186055od6 {
  margin-left: var(--_15jfhu00);
}
._186055oda {
  margin-left: var(--_15jfhu01);
}
._186055ode {
  margin-left: var(--_15jfhu02);
}
._186055odi {
  margin-left: var(--_15jfhu03);
}
._186055odm {
  margin-left: var(--_15jfhu04);
}
._186055odq {
  margin-left: var(--_15jfhu05);
}
._186055odu {
  margin-left: var(--_15jfhu06);
}
._186055ody {
  margin-left: var(--_15jfhu07);
}
._186055oe2 {
  margin-left: 0;
}
._186055oe6 {
  align-items: flex-start;
}
._186055oea {
  align-items: center;
}
._186055oee {
  align-items: flex-end;
}
._186055oei {
  justify-content: flex-start;
}
._186055oem {
  justify-content: center;
}
._186055oeq {
  justify-content: flex-end;
}
._186055oeu {
  justify-content: space-between;
}
._186055oey {
  flex-direction: row;
}
._186055of2 {
  flex-direction: row-reverse;
}
._186055of6 {
  flex-direction: column;
}
._186055ofa {
  flex-direction: column-reverse;
}
._186055ofe {
  flex-wrap: wrap;
}
._186055ofi {
  flex-wrap: nowrap;
}
._186055ofm {
  flex-shrink: 0;
}
._186055ofq {
  flex-grow: 0;
}
._186055ofu {
  flex-grow: 1;
}
._186055ofy {
  text-align: left;
}
._186055og2 {
  text-align: center;
}
._186055og6 {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._186055o4r {
    display: none;
  }
  ._186055o4v {
    display: block;
  }
  ._186055o4z {
    display: inline;
  }
  ._186055o53 {
    display: inline-block;
  }
  ._186055o57 {
    display: flex;
  }
  ._186055o5b {
    position: relative;
  }
  ._186055o5f {
    position: absolute;
  }
  ._186055o5j {
    position: fixed;
  }
  ._186055o5n {
    border-radius: 0;
  }
  ._186055o5r {
    border-radius: 9999px;
  }
  ._186055o5v {
    border-radius: var(--_15jfhu0a);
  }
  ._186055o5z {
    border-radius: var(--_15jfhu0b);
  }
  ._186055o63 {
    border-radius: var(--_15jfhu0c);
  }
  ._186055o67 {
    padding-top: var(--_15jfhu00);
  }
  ._186055o6b {
    padding-top: var(--_15jfhu01);
  }
  ._186055o6f {
    padding-top: var(--_15jfhu02);
  }
  ._186055o6j {
    padding-top: var(--_15jfhu03);
  }
  ._186055o6n {
    padding-top: var(--_15jfhu04);
  }
  ._186055o6r {
    padding-top: var(--_15jfhu05);
  }
  ._186055o6v {
    padding-top: var(--_15jfhu06);
  }
  ._186055o6z {
    padding-top: var(--_15jfhu07);
  }
  ._186055o73 {
    padding-top: 0;
  }
  ._186055o77 {
    padding-bottom: var(--_15jfhu00);
  }
  ._186055o7b {
    padding-bottom: var(--_15jfhu01);
  }
  ._186055o7f {
    padding-bottom: var(--_15jfhu02);
  }
  ._186055o7j {
    padding-bottom: var(--_15jfhu03);
  }
  ._186055o7n {
    padding-bottom: var(--_15jfhu04);
  }
  ._186055o7r {
    padding-bottom: var(--_15jfhu05);
  }
  ._186055o7v {
    padding-bottom: var(--_15jfhu06);
  }
  ._186055o7z {
    padding-bottom: var(--_15jfhu07);
  }
  ._186055o83 {
    padding-bottom: 0;
  }
  ._186055o87 {
    padding-right: var(--_15jfhu00);
  }
  ._186055o8b {
    padding-right: var(--_15jfhu01);
  }
  ._186055o8f {
    padding-right: var(--_15jfhu02);
  }
  ._186055o8j {
    padding-right: var(--_15jfhu03);
  }
  ._186055o8n {
    padding-right: var(--_15jfhu04);
  }
  ._186055o8r {
    padding-right: var(--_15jfhu05);
  }
  ._186055o8v {
    padding-right: var(--_15jfhu06);
  }
  ._186055o8z {
    padding-right: var(--_15jfhu07);
  }
  ._186055o93 {
    padding-right: 0;
  }
  ._186055o97 {
    padding-left: var(--_15jfhu00);
  }
  ._186055o9b {
    padding-left: var(--_15jfhu01);
  }
  ._186055o9f {
    padding-left: var(--_15jfhu02);
  }
  ._186055o9j {
    padding-left: var(--_15jfhu03);
  }
  ._186055o9n {
    padding-left: var(--_15jfhu04);
  }
  ._186055o9r {
    padding-left: var(--_15jfhu05);
  }
  ._186055o9v {
    padding-left: var(--_15jfhu06);
  }
  ._186055o9z {
    padding-left: var(--_15jfhu07);
  }
  ._186055oa3 {
    padding-left: 0;
  }
  ._186055oa7 {
    margin-top: var(--_15jfhu00);
  }
  ._186055oab {
    margin-top: var(--_15jfhu01);
  }
  ._186055oaf {
    margin-top: var(--_15jfhu02);
  }
  ._186055oaj {
    margin-top: var(--_15jfhu03);
  }
  ._186055oan {
    margin-top: var(--_15jfhu04);
  }
  ._186055oar {
    margin-top: var(--_15jfhu05);
  }
  ._186055oav {
    margin-top: var(--_15jfhu06);
  }
  ._186055oaz {
    margin-top: var(--_15jfhu07);
  }
  ._186055ob3 {
    margin-top: 0;
  }
  ._186055ob7 {
    margin-bottom: var(--_15jfhu00);
  }
  ._186055obb {
    margin-bottom: var(--_15jfhu01);
  }
  ._186055obf {
    margin-bottom: var(--_15jfhu02);
  }
  ._186055obj {
    margin-bottom: var(--_15jfhu03);
  }
  ._186055obn {
    margin-bottom: var(--_15jfhu04);
  }
  ._186055obr {
    margin-bottom: var(--_15jfhu05);
  }
  ._186055obv {
    margin-bottom: var(--_15jfhu06);
  }
  ._186055obz {
    margin-bottom: var(--_15jfhu07);
  }
  ._186055oc3 {
    margin-bottom: 0;
  }
  ._186055oc7 {
    margin-right: var(--_15jfhu00);
  }
  ._186055ocb {
    margin-right: var(--_15jfhu01);
  }
  ._186055ocf {
    margin-right: var(--_15jfhu02);
  }
  ._186055ocj {
    margin-right: var(--_15jfhu03);
  }
  ._186055ocn {
    margin-right: var(--_15jfhu04);
  }
  ._186055ocr {
    margin-right: var(--_15jfhu05);
  }
  ._186055ocv {
    margin-right: var(--_15jfhu06);
  }
  ._186055ocz {
    margin-right: var(--_15jfhu07);
  }
  ._186055od3 {
    margin-right: 0;
  }
  ._186055od7 {
    margin-left: var(--_15jfhu00);
  }
  ._186055odb {
    margin-left: var(--_15jfhu01);
  }
  ._186055odf {
    margin-left: var(--_15jfhu02);
  }
  ._186055odj {
    margin-left: var(--_15jfhu03);
  }
  ._186055odn {
    margin-left: var(--_15jfhu04);
  }
  ._186055odr {
    margin-left: var(--_15jfhu05);
  }
  ._186055odv {
    margin-left: var(--_15jfhu06);
  }
  ._186055odz {
    margin-left: var(--_15jfhu07);
  }
  ._186055oe3 {
    margin-left: 0;
  }
  ._186055oe7 {
    align-items: flex-start;
  }
  ._186055oeb {
    align-items: center;
  }
  ._186055oef {
    align-items: flex-end;
  }
  ._186055oej {
    justify-content: flex-start;
  }
  ._186055oen {
    justify-content: center;
  }
  ._186055oer {
    justify-content: flex-end;
  }
  ._186055oev {
    justify-content: space-between;
  }
  ._186055oez {
    flex-direction: row;
  }
  ._186055of3 {
    flex-direction: row-reverse;
  }
  ._186055of7 {
    flex-direction: column;
  }
  ._186055ofb {
    flex-direction: column-reverse;
  }
  ._186055off {
    flex-wrap: wrap;
  }
  ._186055ofj {
    flex-wrap: nowrap;
  }
  ._186055ofn {
    flex-shrink: 0;
  }
  ._186055ofr {
    flex-grow: 0;
  }
  ._186055ofv {
    flex-grow: 1;
  }
  ._186055ofz {
    text-align: left;
  }
  ._186055og3 {
    text-align: center;
  }
  ._186055og7 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._186055o4s {
    display: none;
  }
  ._186055o4w {
    display: block;
  }
  ._186055o50 {
    display: inline;
  }
  ._186055o54 {
    display: inline-block;
  }
  ._186055o58 {
    display: flex;
  }
  ._186055o5c {
    position: relative;
  }
  ._186055o5g {
    position: absolute;
  }
  ._186055o5k {
    position: fixed;
  }
  ._186055o5o {
    border-radius: 0;
  }
  ._186055o5s {
    border-radius: 9999px;
  }
  ._186055o5w {
    border-radius: var(--_15jfhu0a);
  }
  ._186055o60 {
    border-radius: var(--_15jfhu0b);
  }
  ._186055o64 {
    border-radius: var(--_15jfhu0c);
  }
  ._186055o68 {
    padding-top: var(--_15jfhu00);
  }
  ._186055o6c {
    padding-top: var(--_15jfhu01);
  }
  ._186055o6g {
    padding-top: var(--_15jfhu02);
  }
  ._186055o6k {
    padding-top: var(--_15jfhu03);
  }
  ._186055o6o {
    padding-top: var(--_15jfhu04);
  }
  ._186055o6s {
    padding-top: var(--_15jfhu05);
  }
  ._186055o6w {
    padding-top: var(--_15jfhu06);
  }
  ._186055o70 {
    padding-top: var(--_15jfhu07);
  }
  ._186055o74 {
    padding-top: 0;
  }
  ._186055o78 {
    padding-bottom: var(--_15jfhu00);
  }
  ._186055o7c {
    padding-bottom: var(--_15jfhu01);
  }
  ._186055o7g {
    padding-bottom: var(--_15jfhu02);
  }
  ._186055o7k {
    padding-bottom: var(--_15jfhu03);
  }
  ._186055o7o {
    padding-bottom: var(--_15jfhu04);
  }
  ._186055o7s {
    padding-bottom: var(--_15jfhu05);
  }
  ._186055o7w {
    padding-bottom: var(--_15jfhu06);
  }
  ._186055o80 {
    padding-bottom: var(--_15jfhu07);
  }
  ._186055o84 {
    padding-bottom: 0;
  }
  ._186055o88 {
    padding-right: var(--_15jfhu00);
  }
  ._186055o8c {
    padding-right: var(--_15jfhu01);
  }
  ._186055o8g {
    padding-right: var(--_15jfhu02);
  }
  ._186055o8k {
    padding-right: var(--_15jfhu03);
  }
  ._186055o8o {
    padding-right: var(--_15jfhu04);
  }
  ._186055o8s {
    padding-right: var(--_15jfhu05);
  }
  ._186055o8w {
    padding-right: var(--_15jfhu06);
  }
  ._186055o90 {
    padding-right: var(--_15jfhu07);
  }
  ._186055o94 {
    padding-right: 0;
  }
  ._186055o98 {
    padding-left: var(--_15jfhu00);
  }
  ._186055o9c {
    padding-left: var(--_15jfhu01);
  }
  ._186055o9g {
    padding-left: var(--_15jfhu02);
  }
  ._186055o9k {
    padding-left: var(--_15jfhu03);
  }
  ._186055o9o {
    padding-left: var(--_15jfhu04);
  }
  ._186055o9s {
    padding-left: var(--_15jfhu05);
  }
  ._186055o9w {
    padding-left: var(--_15jfhu06);
  }
  ._186055oa0 {
    padding-left: var(--_15jfhu07);
  }
  ._186055oa4 {
    padding-left: 0;
  }
  ._186055oa8 {
    margin-top: var(--_15jfhu00);
  }
  ._186055oac {
    margin-top: var(--_15jfhu01);
  }
  ._186055oag {
    margin-top: var(--_15jfhu02);
  }
  ._186055oak {
    margin-top: var(--_15jfhu03);
  }
  ._186055oao {
    margin-top: var(--_15jfhu04);
  }
  ._186055oas {
    margin-top: var(--_15jfhu05);
  }
  ._186055oaw {
    margin-top: var(--_15jfhu06);
  }
  ._186055ob0 {
    margin-top: var(--_15jfhu07);
  }
  ._186055ob4 {
    margin-top: 0;
  }
  ._186055ob8 {
    margin-bottom: var(--_15jfhu00);
  }
  ._186055obc {
    margin-bottom: var(--_15jfhu01);
  }
  ._186055obg {
    margin-bottom: var(--_15jfhu02);
  }
  ._186055obk {
    margin-bottom: var(--_15jfhu03);
  }
  ._186055obo {
    margin-bottom: var(--_15jfhu04);
  }
  ._186055obs {
    margin-bottom: var(--_15jfhu05);
  }
  ._186055obw {
    margin-bottom: var(--_15jfhu06);
  }
  ._186055oc0 {
    margin-bottom: var(--_15jfhu07);
  }
  ._186055oc4 {
    margin-bottom: 0;
  }
  ._186055oc8 {
    margin-right: var(--_15jfhu00);
  }
  ._186055occ {
    margin-right: var(--_15jfhu01);
  }
  ._186055ocg {
    margin-right: var(--_15jfhu02);
  }
  ._186055ock {
    margin-right: var(--_15jfhu03);
  }
  ._186055oco {
    margin-right: var(--_15jfhu04);
  }
  ._186055ocs {
    margin-right: var(--_15jfhu05);
  }
  ._186055ocw {
    margin-right: var(--_15jfhu06);
  }
  ._186055od0 {
    margin-right: var(--_15jfhu07);
  }
  ._186055od4 {
    margin-right: 0;
  }
  ._186055od8 {
    margin-left: var(--_15jfhu00);
  }
  ._186055odc {
    margin-left: var(--_15jfhu01);
  }
  ._186055odg {
    margin-left: var(--_15jfhu02);
  }
  ._186055odk {
    margin-left: var(--_15jfhu03);
  }
  ._186055odo {
    margin-left: var(--_15jfhu04);
  }
  ._186055ods {
    margin-left: var(--_15jfhu05);
  }
  ._186055odw {
    margin-left: var(--_15jfhu06);
  }
  ._186055oe0 {
    margin-left: var(--_15jfhu07);
  }
  ._186055oe4 {
    margin-left: 0;
  }
  ._186055oe8 {
    align-items: flex-start;
  }
  ._186055oec {
    align-items: center;
  }
  ._186055oeg {
    align-items: flex-end;
  }
  ._186055oek {
    justify-content: flex-start;
  }
  ._186055oeo {
    justify-content: center;
  }
  ._186055oes {
    justify-content: flex-end;
  }
  ._186055oew {
    justify-content: space-between;
  }
  ._186055of0 {
    flex-direction: row;
  }
  ._186055of4 {
    flex-direction: row-reverse;
  }
  ._186055of8 {
    flex-direction: column;
  }
  ._186055ofc {
    flex-direction: column-reverse;
  }
  ._186055ofg {
    flex-wrap: wrap;
  }
  ._186055ofk {
    flex-wrap: nowrap;
  }
  ._186055ofo {
    flex-shrink: 0;
  }
  ._186055ofs {
    flex-grow: 0;
  }
  ._186055ofw {
    flex-grow: 1;
  }
  ._186055og0 {
    text-align: left;
  }
  ._186055og4 {
    text-align: center;
  }
  ._186055og8 {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._186055o4t {
    display: none;
  }
  ._186055o4x {
    display: block;
  }
  ._186055o51 {
    display: inline;
  }
  ._186055o55 {
    display: inline-block;
  }
  ._186055o59 {
    display: flex;
  }
  ._186055o5d {
    position: relative;
  }
  ._186055o5h {
    position: absolute;
  }
  ._186055o5l {
    position: fixed;
  }
  ._186055o5p {
    border-radius: 0;
  }
  ._186055o5t {
    border-radius: 9999px;
  }
  ._186055o5x {
    border-radius: var(--_15jfhu0a);
  }
  ._186055o61 {
    border-radius: var(--_15jfhu0b);
  }
  ._186055o65 {
    border-radius: var(--_15jfhu0c);
  }
  ._186055o69 {
    padding-top: var(--_15jfhu00);
  }
  ._186055o6d {
    padding-top: var(--_15jfhu01);
  }
  ._186055o6h {
    padding-top: var(--_15jfhu02);
  }
  ._186055o6l {
    padding-top: var(--_15jfhu03);
  }
  ._186055o6p {
    padding-top: var(--_15jfhu04);
  }
  ._186055o6t {
    padding-top: var(--_15jfhu05);
  }
  ._186055o6x {
    padding-top: var(--_15jfhu06);
  }
  ._186055o71 {
    padding-top: var(--_15jfhu07);
  }
  ._186055o75 {
    padding-top: 0;
  }
  ._186055o79 {
    padding-bottom: var(--_15jfhu00);
  }
  ._186055o7d {
    padding-bottom: var(--_15jfhu01);
  }
  ._186055o7h {
    padding-bottom: var(--_15jfhu02);
  }
  ._186055o7l {
    padding-bottom: var(--_15jfhu03);
  }
  ._186055o7p {
    padding-bottom: var(--_15jfhu04);
  }
  ._186055o7t {
    padding-bottom: var(--_15jfhu05);
  }
  ._186055o7x {
    padding-bottom: var(--_15jfhu06);
  }
  ._186055o81 {
    padding-bottom: var(--_15jfhu07);
  }
  ._186055o85 {
    padding-bottom: 0;
  }
  ._186055o89 {
    padding-right: var(--_15jfhu00);
  }
  ._186055o8d {
    padding-right: var(--_15jfhu01);
  }
  ._186055o8h {
    padding-right: var(--_15jfhu02);
  }
  ._186055o8l {
    padding-right: var(--_15jfhu03);
  }
  ._186055o8p {
    padding-right: var(--_15jfhu04);
  }
  ._186055o8t {
    padding-right: var(--_15jfhu05);
  }
  ._186055o8x {
    padding-right: var(--_15jfhu06);
  }
  ._186055o91 {
    padding-right: var(--_15jfhu07);
  }
  ._186055o95 {
    padding-right: 0;
  }
  ._186055o99 {
    padding-left: var(--_15jfhu00);
  }
  ._186055o9d {
    padding-left: var(--_15jfhu01);
  }
  ._186055o9h {
    padding-left: var(--_15jfhu02);
  }
  ._186055o9l {
    padding-left: var(--_15jfhu03);
  }
  ._186055o9p {
    padding-left: var(--_15jfhu04);
  }
  ._186055o9t {
    padding-left: var(--_15jfhu05);
  }
  ._186055o9x {
    padding-left: var(--_15jfhu06);
  }
  ._186055oa1 {
    padding-left: var(--_15jfhu07);
  }
  ._186055oa5 {
    padding-left: 0;
  }
  ._186055oa9 {
    margin-top: var(--_15jfhu00);
  }
  ._186055oad {
    margin-top: var(--_15jfhu01);
  }
  ._186055oah {
    margin-top: var(--_15jfhu02);
  }
  ._186055oal {
    margin-top: var(--_15jfhu03);
  }
  ._186055oap {
    margin-top: var(--_15jfhu04);
  }
  ._186055oat {
    margin-top: var(--_15jfhu05);
  }
  ._186055oax {
    margin-top: var(--_15jfhu06);
  }
  ._186055ob1 {
    margin-top: var(--_15jfhu07);
  }
  ._186055ob5 {
    margin-top: 0;
  }
  ._186055ob9 {
    margin-bottom: var(--_15jfhu00);
  }
  ._186055obd {
    margin-bottom: var(--_15jfhu01);
  }
  ._186055obh {
    margin-bottom: var(--_15jfhu02);
  }
  ._186055obl {
    margin-bottom: var(--_15jfhu03);
  }
  ._186055obp {
    margin-bottom: var(--_15jfhu04);
  }
  ._186055obt {
    margin-bottom: var(--_15jfhu05);
  }
  ._186055obx {
    margin-bottom: var(--_15jfhu06);
  }
  ._186055oc1 {
    margin-bottom: var(--_15jfhu07);
  }
  ._186055oc5 {
    margin-bottom: 0;
  }
  ._186055oc9 {
    margin-right: var(--_15jfhu00);
  }
  ._186055ocd {
    margin-right: var(--_15jfhu01);
  }
  ._186055och {
    margin-right: var(--_15jfhu02);
  }
  ._186055ocl {
    margin-right: var(--_15jfhu03);
  }
  ._186055ocp {
    margin-right: var(--_15jfhu04);
  }
  ._186055oct {
    margin-right: var(--_15jfhu05);
  }
  ._186055ocx {
    margin-right: var(--_15jfhu06);
  }
  ._186055od1 {
    margin-right: var(--_15jfhu07);
  }
  ._186055od5 {
    margin-right: 0;
  }
  ._186055od9 {
    margin-left: var(--_15jfhu00);
  }
  ._186055odd {
    margin-left: var(--_15jfhu01);
  }
  ._186055odh {
    margin-left: var(--_15jfhu02);
  }
  ._186055odl {
    margin-left: var(--_15jfhu03);
  }
  ._186055odp {
    margin-left: var(--_15jfhu04);
  }
  ._186055odt {
    margin-left: var(--_15jfhu05);
  }
  ._186055odx {
    margin-left: var(--_15jfhu06);
  }
  ._186055oe1 {
    margin-left: var(--_15jfhu07);
  }
  ._186055oe5 {
    margin-left: 0;
  }
  ._186055oe9 {
    align-items: flex-start;
  }
  ._186055oed {
    align-items: center;
  }
  ._186055oeh {
    align-items: flex-end;
  }
  ._186055oel {
    justify-content: flex-start;
  }
  ._186055oep {
    justify-content: center;
  }
  ._186055oet {
    justify-content: flex-end;
  }
  ._186055oex {
    justify-content: space-between;
  }
  ._186055of1 {
    flex-direction: row;
  }
  ._186055of5 {
    flex-direction: row-reverse;
  }
  ._186055of9 {
    flex-direction: column;
  }
  ._186055ofd {
    flex-direction: column-reverse;
  }
  ._186055ofh {
    flex-wrap: wrap;
  }
  ._186055ofl {
    flex-wrap: nowrap;
  }
  ._186055ofp {
    flex-shrink: 0;
  }
  ._186055oft {
    flex-grow: 0;
  }
  ._186055ofx {
    flex-grow: 1;
  }
  ._186055og1 {
    text-align: left;
  }
  ._186055og5 {
    text-align: center;
  }
  ._186055og9 {
    text-align: right;
  }
}
._15gpj6e0 {
  --_15jfhu00: 24px;
  --_15jfhu01: 4px;
  --_15jfhu02: 8px;
  --_15jfhu03: 12px;
  --_15jfhu04: 20px;
  --_15jfhu05: 32px;
  --_15jfhu06: 48px;
  --_15jfhu07: 96px;
  --_15jfhu08: 44px;
  --_15jfhu09: 4px;
  --_15jfhu0a: 4px;
  --_15jfhu0b: 6px;
  --_15jfhu0c: 10px;
  --_15jfhu0d: #e60278;
  --_15jfhu0e: #f8b1dc;
  --_15jfhu0f: #fdc221;
  --_15jfhu0g: #fee384;
  --_15jfhu0h: #b91e1e;
  --_15jfhu0i: #fb999a;
  --_15jfhu0j: #838fa5;
  --_15jfhu0k: rgba(159, 176, 245, 0.7);
  --_15jfhu0l: #4964e9;
  --_15jfhu0m: #9fb0f5;
  --_15jfhu0n: #1d559d;
  --_15jfhu0o: #98c9f1;
  --_15jfhu0p: #2e3849;
  --_15jfhu0r: #d2d7df;
  --_15jfhu0q: #fff;
  --_15jfhu0s: #12784f;
  --_15jfhu0t: #8bdec5;
  --_15jfhu0u: #512eaa;
  --_15jfhu0v: #c6acf5;
  --_15jfhu0w: 1px;
  --_15jfhu0x: 2px;
  --_15jfhu0y: 3px;
  --_15jfhu0z: 400px;
  --_15jfhu010: 660px;
  --_15jfhu011: 940px;
  --_15jfhu012: 1280px;
  --_15jfhu013: #e60278;
  --_15jfhu014: #f8b1dc;
  --_15jfhu015: #723d02;
  --_15jfhu016: #fee384;
  --_15jfhu017: #b91e1e;
  --_15jfhu018: #fb999a;
  --_15jfhu019: #4964e9;
  --_15jfhu01a: #9fb0f5;
  --_15jfhu01b: #1d559d;
  --_15jfhu01c: #98c9f1;
  --_15jfhu01d: #4964e9;
  --_15jfhu01f: #9fb0f5;
  --_15jfhu01e: #4964e9;
  --_15jfhu01g: #512eaa;
  --_15jfhu01h: #c6acf5;
  --_15jfhu01i: #2e3849;
  --_15jfhu01j: #fff;
  --_15jfhu01k: #12784f;
  --_15jfhu01l: #8bdec5;
  --_15jfhu01m: #512eaa;
  --_15jfhu01n: #c6acf5;
  --_15jfhu01o: #f57c00;
  --_15jfhu01p: #5a6881;
  --_15jfhu01q: hsla(0, 0%, 100%, 0.65);
  --_15jfhu01r: #f7f8fb;
  --_15jfhu01s: #0e131b;
  --_15jfhu01t: #0d3880;
  --_15jfhu01u: #e60278;
  --_15jfhu01v: #cd026b;
  --_15jfhu01w: #fd0585;
  --_15jfhu01x: #feeffa;
  --_15jfhu01y: #fdd7f3;
  --_15jfhu01z: #fde3f6;
  --_15jfhu020: #fdc221;
  --_15jfhu021: #fef8de;
  --_15jfhu022: #b91e1e;
  --_15jfhu023: #a31a1a;
  --_15jfhu024: #db1616;
  --_15jfhu025: #ffe3e2;
  --_15jfhu026: #fef3f3;
  --_15jfhu027: #fcdbdb;
  --_15jfhu028: #fde7e7;
  --_15jfhu029: #4964e9;
  --_15jfhu02a: #3251e6;
  --_15jfhu02b: #5975ff;
  --_15jfhu02c: #f4f6fe;
  --_15jfhu02d: #dde3fc;
  --_15jfhu02e: #e8ecfd;
  --_15jfhu02f: #1d559d;
  --_15jfhu02g: #e3f2fb;
  --_15jfhu02h: #2e3849;
  --_15jfhu02i: #242c39;
  --_15jfhu02j: #384459;
  --_15jfhu02k: #eaecf1;
  --_15jfhu02l: #f7f8fb;
  --_15jfhu02m: #e6e9f3;
  --_15jfhu02n: #eff1f7;
  --_15jfhu02o: #12784f;
  --_15jfhu02p: #e2f7f1;
  --_15jfhu02q: #512eaa;
  --_15jfhu02r: #f1e8fd;
  --_15jfhu02s: #fff;
  --_15jfhu02t: #1c2330;
  --_15jfhu02u: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_15jfhu02v: 1456;
  --_15jfhu02w: 1900;
  --_15jfhu02x: -500;
  --_15jfhu02y: 0;
  --_15jfhu02z: 2048;
  --_15jfhu030: 12px;
  --_15jfhu031: 20px;
  --_15jfhu032: 8.5313px;
  --_15jfhu033: -0.4642em;
  --_15jfhu034: -0.4915em;
  --_15jfhu035: 12px;
  --_15jfhu036: 20px;
  --_15jfhu037: 8.5313px;
  --_15jfhu038: -0.4642em;
  --_15jfhu039: -0.4915em;
  --_15jfhu03a: 14px;
  --_15jfhu03b: 20px;
  --_15jfhu03c: 9.9531px;
  --_15jfhu03d: -0.3451em;
  --_15jfhu03e: -0.3725em;
  --_15jfhu03f: 14px;
  --_15jfhu03g: 20px;
  --_15jfhu03h: 9.9531px;
  --_15jfhu03i: -0.3451em;
  --_15jfhu03j: -0.3725em;
  --_15jfhu03k: 16px;
  --_15jfhu03l: 24px;
  --_15jfhu03m: 11.375px;
  --_15jfhu03n: -0.3809em;
  --_15jfhu03o: -0.4082em;
  --_15jfhu03p: 16px;
  --_15jfhu03q: 24px;
  --_15jfhu03r: 11.375px;
  --_15jfhu03s: -0.3809em;
  --_15jfhu03t: -0.4082em;
  --_15jfhu03u: 18px;
  --_15jfhu03v: 28px;
  --_15jfhu03w: 12.7969px;
  --_15jfhu03x: -0.4086em;
  --_15jfhu03y: -0.436em;
  --_15jfhu03z: 18px;
  --_15jfhu040: 28px;
  --_15jfhu041: 12.7969px;
  --_15jfhu042: -0.4086em;
  --_15jfhu043: -0.436em;
  --_15jfhu044: 400;
  --_15jfhu045: 500;
  --_15jfhu046: 700;
  --_15jfhu047: 28px;
  --_15jfhu048: 36px;
  --_15jfhu049: 19.9063px;
  --_15jfhu04a: -0.2737em;
  --_15jfhu04b: -0.3011em;
  --_15jfhu04c: 42px;
  --_15jfhu04d: 44px;
  --_15jfhu04e: 29.8594px;
  --_15jfhu04f: -0.1547em;
  --_15jfhu04g: -0.182em;
  --_15jfhu04h: 21px;
  --_15jfhu04i: 32px;
  --_15jfhu04j: 14.9297px;
  --_15jfhu04k: -0.3928em;
  --_15jfhu04l: -0.4201em;
  --_15jfhu04m: 28px;
  --_15jfhu04n: 36px;
  --_15jfhu04o: 19.9063px;
  --_15jfhu04p: -0.2737em;
  --_15jfhu04q: -0.3011em;
  --_15jfhu04r: 21px;
  --_15jfhu04s: 28px;
  --_15jfhu04t: 14.9297px;
  --_15jfhu04u: -0.2975em;
  --_15jfhu04v: -0.3249em;
  --_15jfhu04w: 21px;
  --_15jfhu04x: 28px;
  --_15jfhu04y: 14.9297px;
  --_15jfhu04z: -0.2975em;
  --_15jfhu050: -0.3249em;
  --_15jfhu051: 18px;
  --_15jfhu052: 28px;
  --_15jfhu053: 12.7969px;
  --_15jfhu054: -0.4086em;
  --_15jfhu055: -0.436em;
  --_15jfhu056: 18px;
  --_15jfhu057: 28px;
  --_15jfhu058: 12.7969px;
  --_15jfhu059: -0.4086em;
  --_15jfhu05a: -0.436em;
  --_15jfhu05b: 400;
  --_15jfhu05c: 500;
  --_15jfhu05d: 24px;
  --_15jfhu05e: 20px;
  --_15jfhu05f: transform 0.125s ease, opacity 0.125s ease;
  --_15jfhu05g: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_15jfhu05h: scale(0.95);
  --_15jfhu05i: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_15jfhu05j: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_15jfhu05k: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.mf5rjw0 {
  font-family: var(--_15jfhu02u);
}
.mf5rjw1 {
  font-weight: var(--_15jfhu044);
}
.mf5rjw2 {
  font-weight: var(--_15jfhu045);
}
.mf5rjw3 {
  font-weight: var(--_15jfhu046);
}
.mf5rjw4 {
  --_1d0g9qk0: var(--_15jfhu030);
  --_1d0g9qk1: var(--_15jfhu031);
  --_1d0g9qk2: var(--_15jfhu033);
  --_1d0g9qk3: var(--_15jfhu034);
}
.mf5rjw7 {
  --_1d0g9qk0: var(--_15jfhu03a);
  --_1d0g9qk1: var(--_15jfhu03b);
  --_1d0g9qk2: var(--_15jfhu03d);
  --_1d0g9qk3: var(--_15jfhu03e);
}
.mf5rjwa {
  --_1d0g9qk0: var(--_15jfhu03k);
  --_1d0g9qk1: var(--_15jfhu03l);
  --_1d0g9qk2: var(--_15jfhu03n);
  --_1d0g9qk3: var(--_15jfhu03o);
}
.mf5rjwd {
  --_1d0g9qk0: var(--_15jfhu03u);
  --_1d0g9qk1: var(--_15jfhu03v);
  --_1d0g9qk2: var(--_15jfhu03x);
  --_1d0g9qk3: var(--_15jfhu03y);
}
.mf5rjwg {
  font-size: var(--_15jfhu030);
  line-height: var(--_15jfhu031);
}
.mf5rjwh {
  font-size: var(--_15jfhu03a);
  line-height: var(--_15jfhu03b);
}
.mf5rjwi {
  font-size: var(--_15jfhu03k);
  line-height: var(--_15jfhu03l);
}
.mf5rjwj {
  font-size: var(--_15jfhu03u);
  line-height: var(--_15jfhu03v);
}
.mf5rjwk {
  font-weight: var(--_15jfhu05b);
}
.mf5rjwl {
  font-weight: var(--_15jfhu05c);
}
.mf5rjwm {
  --_1d0g9qk0: var(--_15jfhu047);
  --_1d0g9qk1: var(--_15jfhu048);
  --_1d0g9qk2: var(--_15jfhu04a);
  --_1d0g9qk3: var(--_15jfhu04b);
}
.mf5rjwp {
  --_1d0g9qk0: var(--_15jfhu04h);
  --_1d0g9qk1: var(--_15jfhu04i);
  --_1d0g9qk2: var(--_15jfhu04k);
  --_1d0g9qk3: var(--_15jfhu04l);
}
.mf5rjws {
  --_1d0g9qk0: var(--_15jfhu04r);
  --_1d0g9qk1: var(--_15jfhu04s);
  --_1d0g9qk2: var(--_15jfhu04u);
  --_1d0g9qk3: var(--_15jfhu04v);
}
.mf5rjwv {
  --_1d0g9qk0: var(--_15jfhu051);
  --_1d0g9qk1: var(--_15jfhu052);
  --_1d0g9qk2: var(--_15jfhu054);
  --_1d0g9qk3: var(--_15jfhu055);
}
html:not(._186055oz) .mf5rjw18 {
  --mf5rjwy: var(--_15jfhu017);
  --mf5rjwz: var(--_15jfhu015);
  --mf5rjw10: var(--_15jfhu01b);
  --mf5rjw11: var(--_15jfhu01m);
  --mf5rjw12: var(--_15jfhu01k);
  --mf5rjw13: var(--_15jfhu013);
  --mf5rjw14: var(--_15jfhu019);
  --mf5rjw15: var(--_15jfhu01i);
  --mf5rjw16: var(--_15jfhu01p);
  --mf5rjw17: var(--_15jfhu01d);
}
html:not(._186055oz) .mf5rjw19 {
  --mf5rjwy: var(--_15jfhu018);
  --mf5rjwz: var(--_15jfhu016);
  --mf5rjw10: var(--_15jfhu01c);
  --mf5rjw11: var(--_15jfhu01n);
  --mf5rjw12: var(--_15jfhu01l);
  --mf5rjw13: var(--_15jfhu014);
  --mf5rjw14: var(--_15jfhu01a);
  --mf5rjw15: var(--_15jfhu01j);
  --mf5rjw16: var(--_15jfhu01q);
  --mf5rjw17: var(--_15jfhu01f);
}
html._186055oz .mf5rjw1a {
  --mf5rjwy: var(--_15jfhu017);
  --mf5rjwz: var(--_15jfhu015);
  --mf5rjw10: var(--_15jfhu01b);
  --mf5rjw11: var(--_15jfhu01m);
  --mf5rjw12: var(--_15jfhu01k);
  --mf5rjw13: var(--_15jfhu013);
  --mf5rjw14: var(--_15jfhu019);
  --mf5rjw15: var(--_15jfhu01i);
  --mf5rjw16: var(--_15jfhu01p);
  --mf5rjw17: var(--_15jfhu01d);
}
html._186055oz .mf5rjw1b {
  --mf5rjwy: var(--_15jfhu018);
  --mf5rjwz: var(--_15jfhu016);
  --mf5rjw10: var(--_15jfhu01c);
  --mf5rjw11: var(--_15jfhu01n);
  --mf5rjw12: var(--_15jfhu01l);
  --mf5rjw13: var(--_15jfhu014);
  --mf5rjw14: var(--_15jfhu01a);
  --mf5rjw15: var(--_15jfhu01j);
  --mf5rjw16: var(--_15jfhu01q);
  --mf5rjw17: var(--_15jfhu01f);
}
html:not(._186055oz) .mf5rjw1c,
html:not(._186055oz) .mf5rjw1d,
html:not(._186055oz) .mf5rjw1e,
html:not(._186055oz) .mf5rjw1f {
  --mf5rjw15: var(--mf5rjwy);
}
html:not(._186055oz) .mf5rjw1g,
html:not(._186055oz) .mf5rjw1h {
  --mf5rjw15: var(--mf5rjwz);
}
html:not(._186055oz) .mf5rjw1i {
  --mf5rjw15: var(--mf5rjw12);
}
html:not(._186055oz) .mf5rjw1j {
  --mf5rjw15: var(--mf5rjw10);
}
html:not(._186055oz) .mf5rjw1k {
  --mf5rjw15: var(--mf5rjw11);
}
html._186055oz .mf5rjw1l,
html._186055oz .mf5rjw1m,
html._186055oz .mf5rjw1n,
html._186055oz .mf5rjw1o {
  --mf5rjw15: var(--mf5rjwy);
}
html._186055oz .mf5rjw1p,
html._186055oz .mf5rjw1q {
  --mf5rjw15: var(--mf5rjwz);
}
html._186055oz .mf5rjw1r {
  --mf5rjw15: var(--mf5rjw12);
}
html._186055oz .mf5rjw1s {
  --mf5rjw15: var(--mf5rjw10);
}
html._186055oz .mf5rjw1t {
  --mf5rjw15: var(--mf5rjw11);
}
.mf5rjw1u {
  color: var(--mf5rjwy);
}
.mf5rjw1v {
  color: var(--mf5rjwz);
}
.mf5rjw1w {
  color: var(--mf5rjw10);
}
.mf5rjw1x {
  color: var(--mf5rjw11);
}
.mf5rjw1y {
  color: var(--mf5rjw12);
}
.mf5rjw1z {
  color: var(--mf5rjw13);
}
.mf5rjw20 {
  color: var(--mf5rjw14);
}
.mf5rjw21 {
  color: var(--mf5rjw15);
}
.mf5rjw22 {
  color: var(--mf5rjw16);
}
.mf5rjw23 {
  color: var(--mf5rjw17);
}
.mf5rjw24 {
  padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu031)) / 2);
  padding-top: calc((var(--_15jfhu08) - var(--_15jfhu031)) / 2);
}
.mf5rjw25 {
  padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu03b)) / 2);
  padding-top: calc((var(--_15jfhu08) - var(--_15jfhu03b)) / 2);
}
.mf5rjw26 {
  padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu03l)) / 2);
  padding-top: calc((var(--_15jfhu08) - var(--_15jfhu03l)) / 2);
}
.mf5rjw27 {
  padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu03v)) / 2);
  padding-top: calc((var(--_15jfhu08) - var(--_15jfhu03v)) / 2);
}
@media screen and (min-width: 740px) {
  .mf5rjw4 {
    --_1d0g9qk0: var(--_15jfhu035);
    --_1d0g9qk1: var(--_15jfhu036);
    --_1d0g9qk2: var(--_15jfhu038);
    --_1d0g9qk3: var(--_15jfhu039);
  }
  .mf5rjw7 {
    --_1d0g9qk0: var(--_15jfhu03f);
    --_1d0g9qk1: var(--_15jfhu03g);
    --_1d0g9qk2: var(--_15jfhu03i);
    --_1d0g9qk3: var(--_15jfhu03j);
  }
  .mf5rjwa {
    --_1d0g9qk0: var(--_15jfhu03p);
    --_1d0g9qk1: var(--_15jfhu03q);
    --_1d0g9qk2: var(--_15jfhu03s);
    --_1d0g9qk3: var(--_15jfhu03t);
  }
  .mf5rjwd {
    --_1d0g9qk0: var(--_15jfhu03z);
    --_1d0g9qk1: var(--_15jfhu040);
    --_1d0g9qk2: var(--_15jfhu042);
    --_1d0g9qk3: var(--_15jfhu043);
  }
  .mf5rjwg {
    font-size: var(--_15jfhu035);
    line-height: var(--_15jfhu036);
  }
  .mf5rjwh {
    font-size: var(--_15jfhu03f);
    line-height: var(--_15jfhu03g);
  }
  .mf5rjwi {
    font-size: var(--_15jfhu03p);
    line-height: var(--_15jfhu03q);
  }
  .mf5rjwj {
    font-size: var(--_15jfhu03z);
    line-height: var(--_15jfhu040);
  }
  .mf5rjwm {
    --_1d0g9qk0: var(--_15jfhu04c);
    --_1d0g9qk1: var(--_15jfhu04d);
    --_1d0g9qk2: var(--_15jfhu04f);
    --_1d0g9qk3: var(--_15jfhu04g);
  }
  .mf5rjwp {
    --_1d0g9qk0: var(--_15jfhu04m);
    --_1d0g9qk1: var(--_15jfhu04n);
    --_1d0g9qk2: var(--_15jfhu04p);
    --_1d0g9qk3: var(--_15jfhu04q);
  }
  .mf5rjws {
    --_1d0g9qk0: var(--_15jfhu04w);
    --_1d0g9qk1: var(--_15jfhu04x);
    --_1d0g9qk2: var(--_15jfhu04z);
    --_1d0g9qk3: var(--_15jfhu050);
  }
  .mf5rjwv {
    --_1d0g9qk0: var(--_15jfhu056);
    --_1d0g9qk1: var(--_15jfhu057);
    --_1d0g9qk2: var(--_15jfhu059);
    --_1d0g9qk3: var(--_15jfhu05a);
  }
  .mf5rjw24 {
    padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu036)) / 2);
    padding-top: calc((var(--_15jfhu08) - var(--_15jfhu036)) / 2);
  }
  .mf5rjw25 {
    padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu03g)) / 2);
    padding-top: calc((var(--_15jfhu08) - var(--_15jfhu03g)) / 2);
  }
  .mf5rjw26 {
    padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu03q)) / 2);
    padding-top: calc((var(--_15jfhu08) - var(--_15jfhu03q)) / 2);
  }
  .mf5rjw27 {
    padding-bottom: calc((var(--_15jfhu08) - var(--_15jfhu040)) / 2);
    padding-top: calc((var(--_15jfhu08) - var(--_15jfhu040)) / 2);
  }
}
._1igovxw6 {
  background: var(--_1igovxw0);
}
._1igovxw7 {
  background: var(--_1igovxw1);
}
._1igovxw8 {
  background: var(--_1igovxw2);
}
._1igovxw9 {
  background: var(--_1igovxw3);
}
._1igovxwa {
  background: var(--_1igovxw4);
}
._1igovxwb {
  background: var(--_1igovxw5);
}
html:not(._186055oz) ._1igovxwc {
  --_1igovxw0: var(--_15jfhu0u);
  --_1igovxw1: var(--_15jfhu0n);
  --_1igovxw2: var(--_15jfhu0s);
  --_1igovxw3: var(--_15jfhu0f);
  --_1igovxw4: var(--_15jfhu0h);
  --_1igovxw5: var(--_15jfhu0l);
}
html:not(._186055oz) ._1igovxwd {
  --_1igovxw0: var(--_15jfhu0v);
  --_1igovxw1: var(--_15jfhu0o);
  --_1igovxw2: var(--_15jfhu0t);
  --_1igovxw3: var(--_15jfhu0g);
  --_1igovxw4: var(--_15jfhu0i);
  --_1igovxw5: var(--_15jfhu0m);
}
html._186055oz ._1igovxwe {
  --_1igovxw0: var(--_15jfhu0u);
  --_1igovxw1: var(--_15jfhu0n);
  --_1igovxw2: var(--_15jfhu0s);
  --_1igovxw3: var(--_15jfhu0f);
  --_1igovxw4: var(--_15jfhu0h);
  --_1igovxw5: var(--_15jfhu0l);
}
html._186055oz ._1igovxwf {
  --_1igovxw0: var(--_15jfhu0v);
  --_1igovxw1: var(--_15jfhu0o);
  --_1igovxw2: var(--_15jfhu0t);
  --_1igovxw3: var(--_15jfhu0g);
  --_1igovxw4: var(--_15jfhu0i);
  --_1igovxw5: var(--_15jfhu0m);
}
._1igovxwg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1igovxwh {
  width: var(--_15jfhu0c);
}
.iwk2571 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.2
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__186055oz,html.sprinkles_darkMode__186055oz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_default__15gpj6e0 typography_lightModeTone_light__mf5rjw18 typography_darkModeTone_dark__mf5rjw1b">
+        <div class="reset_base__1j5ut1e0 sprinkles_paddingBottom_gutter_mobile__186055o76 sprinkles_paddingTop_gutter_mobile__186055o66 sprinkles_paddingLeft_gutter_mobile__186055o96 sprinkles_paddingRight_gutter_mobile__186055o86 sprinkles_position_relative_mobile__186055o5a typography_lightModeTone_light__mf5rjw18 typography_darkModeTone_dark__mf5rjw1b sprinkles_background_surface_lightMode__186055o32 sprinkles_background_surfaceDark_darkMode__186055o35">
+          <span class="reset_base__1j5ut1e0 sprinkles_display_block_mobile__186055o4u typography_fontFamily__mf5rjw0 typography_fontWeight_regular__mf5rjw1 typography_tone_neutral__mf5rjw21 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__mf5rjwd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
